--- a/render.yaml
+++ b/render.yaml
@@ -7,4 +7,4 @@ services:
     routes:
       - type: rewrite
         source: /
-        destination: /mockup-enhanced.html
+        destination: /index.html
